--- a/src/main/res/layout/fragment_add_contact.xml
+++ b/src/main/res/layout/fragment_add_contact.xml
@@ -13,27 +13,14 @@
         android:padding="20dp"
         tools:layout_editor_absoluteX="8dp">
 
-        <TextView
-            android:id="@+id/view_contact_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="名前を入力してください" />
-
         <EditText
             android:id="@+id/contact_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:textSize="20sp"
+            android:hint="@string/contact_add_name"
             android:inputType="textPersonName" />
-
-        <TextView
-            android:id="@+id/view_contact_mail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="連絡先を入力してください" />
 
         <EditText
             android:id="@+id/contact_mail"
@@ -41,6 +28,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:textSize="20sp"
+            android:hint="@string/contact_add_mail"
             android:inputType="textEmailAddress" />
 
         <Button
@@ -50,7 +38,7 @@
             android:layout_gravity="center"
             android:background="@color/red"
             android:textColor="@color/aqua"
-            android:text="ADD" />
+            android:text="@string/contact_add_bt" />
     </LinearLayout>
 
 </FrameLayout>
