--- a/src/main/res/layout/fragment_timer.xml
+++ b/src/main/res/layout/fragment_timer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mclock"
+    android:background="@drawable/clock1"
     tools:context=".MainActivity">
 
 
@@ -17,58 +17,98 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="55dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="55dp"
         android:layout_marginBottom="169dp"
         android:gravity="center"
         android:orientation="vertical">
 
+            <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/Rdtimer"
+                android:visibility="visible"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="90dp">
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/minute"
+                    android:text="@string/minute"
+                    android:textSize="30dp"
+                    android:checked="true"
+                    android:layout_marginRight="50dp"/>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/second"
+                    android:text="@string/second"
+                    android:textSize="30dp"/>
+            </RadioGroup>
+
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/bttang"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_control_point_black_24dp"/>
-
-            <TextView
-                android:id="@+id/textViewTimer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="00:00"
-                android:textColor="@color/colorPrimary"
-                android:textSize="80dp" />
+            android:orientation="horizontal"
+            >
 
             <ImageButton
                 android:id="@+id/btgiam"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_remove_circle_outline_black_24dp"/>
+                android:layout_marginTop="50dp"
+                android:background="@null"
+                android:src="@drawable/ic_remove_circle_outline_black_24dp" />
+
+            <TextView
+                android:id="@+id/textViewTimer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="30dp"
+                android:text="00:00"
+                android:textColor="@color/colorPrimary"
+                android:textSize="70dp" />
+
+            <ImageButton
+                android:id="@+id/bttang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:background="@null"
+                android:src="@drawable/ic_control_point_black_24dp"
+                android:contentDescription="TODO" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
+            android:orientation="horizontal"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="20dp">
 
 
             <Button
+                android:background="@android:color/holo_green_dark"
                 android:id="@+id/buttonStartStop"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Start" />
+                android:textSize="30dp"
+                android:text="@string/start"
+                android:layout_marginRight="70dp" />
 
 
             <Button
+                android:background="@android:color/holo_green_dark"
                 android:id="@+id/buttonReset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Reset"
+                android:text="@string/reset"
+                android:textSize="30dp"
                 android:visibility="invisible"
                 tools:visibility="visible" />
 
@@ -76,19 +116,15 @@
         </LinearLayout>
 
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
         <Button
             android:id="@+id/dungthem"
             android:layout_width="wrap_content"
-            android:layout_height="106dp"
-            android:text="延長時間"
+            android:layout_height="wrap_content"
+            android:background="@color/aqua"
+            android:text="@string/over"
             android:textColor="@android:color/holo_red_light"
-
-            android:textSize="50dp"
+            android:textSize="70dp"
+            android:layout_marginRight="12dp"
             android:visibility="invisible"
             tools:visibility="visible" />
 
