--- a/src/main/res/layout/fragmente_add_plan.xml
+++ b/src/main/res/layout/fragmente_add_plan.xml
@@ -16,7 +16,7 @@
             android:id="@+id/planname_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="PLAN NAME"
+            android:text="@string/plan_name"
             android:textAlignment="center" />
 
         <EditText
@@ -29,14 +29,14 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="34dp" />
+            android:layout_height="12dp" />
 
         <TextView
             android:id="@+id/Plandate_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="PLAN DATE"
+            android:text="@string/plan_date"
             android:textAlignment="center" />
 
         <Space
@@ -55,26 +55,26 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="40dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="year"
+                    android:text="@string/plan_tv1"
                     android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="month"
+                    android:text="@string/plan_tv2"
                     android:textAlignment="center" />
 
                 <TextView
                     android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="day"
+                    android:text="@string/plan_tv3"
                     android:textAlignment="center" />
             </LinearLayout>
 
@@ -85,27 +85,35 @@
 
                 <Spinner
                     android:id="@+id/planyear_spinner"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="30dp"
+                    android:textAlignment="viewEnd"
                     android:layout_weight="1" />
 
                 <Spinner
                     android:id="@+id/planmonth_spinner"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginRight="30dp"
+                    android:textAlignment="viewEnd"
                     android:layout_weight="1" />
 
                 <Spinner
                     android:id="@+id/planday_spinner"
-                    android:layout_width="366dp"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:textAlignment="viewEnd"
+                    android:layout_marginRight="30dp"
                     android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="41dp" />
+            android:layout_height="46dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -113,7 +121,7 @@
             android:orientation="horizontal">
 
             <Space
-                android:layout_width="172dp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
@@ -121,7 +129,8 @@
                 android:id="@+id/checkBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Check if you clear this!" />
+                android:layout_weight="3"
+                android:text="@string/checkbox" />
 
             <Space
                 android:layout_width="wrap_content"
@@ -149,7 +158,7 @@
                 android:layout_height="69dp"
                 android:layout_weight="1"
                 android:background="@color/colorAccent"
-                android:text="DELETE"
+                android:text="@string/delete"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:typeface="sans" />
@@ -165,7 +174,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/colorPrimary"
-                android:text="CONFIRM"
+                android:text="@string/decide"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 android:typeface="serif" />
